# spamcap

./: .gitignore  README.md  SPEC.md  launch.sh  pyproject.toml
backend/: analysis.py  detector.py  emailutil.py  main.py  models.py  parser.py  resolver.py
backend/detector/: __init__.py  checks_identity.py  checks_routing.py  core.py  domains.py  models.py
backend/parser/: __init__.py  core.py  filters.py  headers.py  hops.py  models.py  text.py
backend/resolver/: __init__.py  models.py
docs/: index.html  style.css
frontend/: app.js  dom.js  format.js  index.html  render-card.js  render-route.js  render-verdict.js  style.css
frontend/css/: auth.css  base.css  colophon.css  deposit.css  fonts.css  masthead.css  report.css  spine.css
scripts/: download_geoip.sh
tests/: test_api.py  test_detector.py  test_dnsbl.py  test_filter.py  test_parser.py  test_phishing.py  test_resolver.py
