[project]
name = "spamcap"
version = "0.1.0"
description = "Analyseur d'en-têtes de courriel avec visualisation du parcours et détection de falsification"
license = "etalab-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "dnspython>=2.8.0",
    "fastapi>=0.138.1",
    "geoip2>=5.2.0",
    "ipwhois>=1.3.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
